# eazy-chat

./: client.py  config.py  main.py  pyproject.toml  requirements.txt
api/: index.py
